Fixed the issue with the email address at the bottom of the page that had to do with it overflowing on mobile devices

--- a/css/Style.css
+++ b/css/Style.css
@@ -29,6 +29,15 @@
 	text-align: center;
 	font-family: 'Pacifico', cursive;
 	color: goldenrod;
+	padding: 5px 0px 0px 0px;
+}
+
+.email {
+	word-wrap: break-word;
+}
+
+address {
+	
 }
 
 /* Footer */
